fix styling for bookmarks on mobile

--- a/styles/dark-mode.scss
+++ b/styles/dark-mode.scss
@@ -173,7 +173,7 @@ $dark-footer-shadow: 0px 4px 0px -2px rgb(255 255 255/ 9%), 0px -11px 7px -8px r
   }
 
   .bookmarks.container {
-    .title {
+    .title-container {
       span, button {
         color: white !important;
       }
